--- a/package.json
+++ b/package.json
@@ -6,22 +6,23 @@
     "eslint": "eslint .",
     "tsc": "tsc",
     "precommit": "npm run generate && npm run eslint && npm run tsc && echo ALL PRECOMMIT CHECKS PASSED SUCCESSFULLY, LET\\'S FUCKING GO!",
-    "start": "esrun --tsconfig=./tsconfig.json src/app.ts"
+    "start": "esrun --send-code-mode=temporaryFile src/app.ts",
+    "upgrade": "ncu"
   },
   "dependencies": {
-    "@digitak/esrun": "3.2.20",
+    "@digitak/esrun": "3.2.24",
     "dotenv": "^16.0.3",
-    "meilisearch": "^0.31.1"
+    "meilisearch": "^0.32.3"
   },
   "devDependencies": {
-    "@graphql-codegen/cli": "^3.2.1",
-    "@graphql-codegen/typescript": "3.0.1",
-    "@graphql-codegen/typescript-graphql-request": "^4.5.8",
-    "@graphql-codegen/typescript-operations": "^3.0.1",
+    "@graphql-codegen/cli": "^3.3.1",
+    "@graphql-codegen/typescript": "3.0.4",
+    "@graphql-codegen/typescript-graphql-request": "^4.5.9",
+    "@graphql-codegen/typescript-operations": "^3.0.4",
     "@types/node": "^18.14.6",
-    "@typescript-eslint/eslint-plugin": "^5.54.0",
-    "@typescript-eslint/parser": "^5.54.0",
-    "eslint": "^8.35.0",
+    "@typescript-eslint/eslint-plugin": "^5.59.5",
+    "@typescript-eslint/parser": "^5.59.5",
+    "eslint": "^8.40.0",
     "graphql": "^16.6.0",
     "graphql-request": "5.1.0"
   }
