--- a/package.json
+++ b/package.json
@@ -12,6 +12,9 @@
   "dependencies": {
     "@digitak/esrun": "3.2.24",
     "dotenv": "^16.0.3",
+    "html-to-text": "^9.0.5",
+    "isomorphic-dompurify": "^1.5.0",
+    "marked": "^5.0.2",
     "meilisearch": "^0.32.3"
   },
   "devDependencies": {
@@ -19,6 +22,8 @@
     "@graphql-codegen/typescript": "3.0.4",
     "@graphql-codegen/typescript-graphql-request": "^4.5.9",
     "@graphql-codegen/typescript-operations": "^3.0.4",
+    "@types/html-to-text": "^9.0.0",
+    "@types/marked": "^5.0.0",
     "@types/node": "^18.14.6",
     "@typescript-eslint/eslint-plugin": "^5.59.5",
     "@typescript-eslint/parser": "^5.59.5",
